Copy Dupligroup #35935

Closed
opened 2013-07-01 13:24:18 +02:00 by Alexander KHozyashev · 3 comments

%%%Ubuntu 12.04
Blender 2.67b + svn57380. Blender 2.67.

Problem: When i have linked group from other file(bug_report1.blend)(instance), and i try make links(A-L group), previously selected a few these object, i copy group and dupligroup, but should copy only group.
When i attempt copy group from not linked object, all linked object lose information about instance group.
Аnd another thing, if you try copy group from linked object on usual object, then dupligroup will be to copy too.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Select more 1 linked object and make links(A-L group).

%%%

%%%Ubuntu 12.04 Blender 2.67b + svn57380. Blender 2.67. Problem: When i have linked group from other file(bug_report1.blend)(instance), and i try make links(A-L group), previously selected a few these object, i copy group and dupligroup, but should copy only group. When i attempt copy group from not linked object, all linked object lose information about instance group. Аnd another thing, if you try copy group from linked object on usual object, then dupligroup will be to copy too. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Select more 1 linked object and make links(A-L group). %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn revision 57968, thanks for the report.%%%

%%%Fix in svn revision 57968, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35935
No description provided.