Fix #35935: make links > groups, which copies group membership between objects, would also copy object dupligroups (next item in the menu).